--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *.pyo
 
 # Production builds
-frontend/build/
+# frontend/build/  # Commented out to allow pre-built files for Vercel
 frontend/dist/
 
 # Environment files
