Explicitly disable build commands in vercel.json
- Set empty build/install commands
- Fix persistent build error
- Vercel should now serve pre-built files

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "buildCommand": "",
+  "outputDirectory": ".",
+  "installCommand": "",
+  "devCommand": "",
+  "framework": null,
   "rewrites": [
     {
       "source": "/api/(.*)",
