Fix 404 error by including build files and updating vercel.json
- Add pre-built frontend files to repository
- Update vercel.json to serve from frontend/build directory
- Fix routing issues causing 404 error
- Ensure API endpoints are properly configured

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "",
-  "outputDirectory": ".",
+  "outputDirectory": "frontend/build",
   "installCommand": "",
   "devCommand": "",
   "framework": null,
@@ -8,10 +8,6 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/frontend/build/$1"
     }
   ]
 }
