--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,22 @@
 {
-  "buildCommand": "",
+  "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
-  "installCommand": "",
+  "installCommand": "cd frontend && npm install",
   "devCommand": "",
   "framework": null,
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.9"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/frontend/build/$1"
     }
   ]
 }
