Fix: Update Python runtime format to python@3.9

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
   "installCommand": "cd frontend && npm install",
@@ -6,7 +7,7 @@
   "framework": null,
   "functions": {
     "api/index.py": {
-      "runtime": "python3.9"
+      "runtime": "python@3.9"
     }
   },
   "rewrites": [
