--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "vercel-build": "npm run build",
+    "vercel-build": "CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
