🚀 Major Feature Update: Advanced Search, Pagination, Location Accuracy
✨ NEW FEATURES:
• Puana göre sıralama (Yüksek→Düşük ve Düşük→Yüksek)
• Ayarlanabilir minimum puan filtresi (1.0-5.0)
• Restoran adına göre arama (opsiyonel, entegre)
• Geliştirilmiş duplicate restaurant handling
• Pagination sistemi (20 sonuç per sayfa)
• "Daha Fazla Göster" butonu
• Lokasyon doğruluğu iyileştirmeleri

🔧 TECHNICAL IMPROVEMENTS:
• Türkçe karakter normalizasyonu (ş→s, ğ→g, ü→u, ö→o, ç→c, ı→i)
• 35 İstanbul ilçesi için varyasyon tablosu
• Gelişmiş ilçe filtreleme algoritması
• Coğrafi sınır kontrolü altyapısı
• Backend pagination API
• Frontend state management iyileştirmeleri
• CORS configuration düzeltmeleri
• Debug kod temizliği

📊 PERFORMANCE:
• 30 sonuca çıkarılan backend limit
• Place ID ile duplicate detection
• Optimized API responses
• Better error handling

🎯 USER EXPERIENCE:
• "Beşiktaş" ve "Besiktas" aynı sonuçları verir
• Flexible search: sadece restoran adı ile arama
• İlçe + restoran adı kombinasyonu
• Gelişmiş sıralama seçenekleri
• Responsive UI improvements

✅ VERCEL READY:
• Serverless functions updated
• Production deployment optimized
• Environment variables configured
• Build process improved

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/$1"
