🔧 Fix: Vercel Runtime & Frontend Debug
VERCEL FIXES:
• vercel.json: Updated Python runtime to @vercel/python@3.9
• Added version: 2 to vercel.json for compatibility
• Fixed runtime format error

FRONTEND DEBUG:
• Re-added console logs for ara butonu debugging
• handleSearch function debugging enabled
• Frontend build updated

BACKEND STATUS:
• Backend healthy and responding
• API endpoints working correctly
• Lokasyon accuracy improvements active

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
+  "version": 2,
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
   "functions": {
     "api/*.py": {
-      "runtime": "python3.9"
+      "runtime": "@vercel/python@3.9"
     }
   },
   "rewrites": [
