--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
   "functions": {
-    "api/*.py": {
-      "runtime": "@vercel/python@3.9"
+    "api/**/*.py": {
+      "runtime": "vercel-python@3.9"
     }
   },
   "rewrites": [
